# ai-security-tracker

./: .gitignore  LICENSE  README.md
backend/: .env.example  database.py  debug_request.py  graph.py  list_models.py  main.py  models.py  monitor_graph.py  pyproject.toml  test_graph.py  test_monitor.py  test_scraper.py  tools.py
backend/data/: events.json  prompts.json  websites.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: EventCard.jsx  Navbar.jsx
frontend/src/pages/: Dashboard.jsx  Prompts.jsx  Settings.jsx
